@@ -1,3 +1,7 @@
+2003-11-24  Bruno Haible  <bruno@clisp.org>
+
+	* eealloc.h: New file.
+
 2004-01-15  Jim Meyering  <jim@meyering.net>
 
 	Merge from coreutils.
