@@ -1,3 +1,8 @@
+2004-01-20  Bruno Haible  <bruno@clisp.org>
+
+	* modules/eealloc: New file.
+	* MODULES.html.sh (func_all_modules): Add eealloc.
+
 2004-01-15  Paul Eggert  <eggert@twinsun.com>
 
 	* modules/poll: Add BUILT_SOURCES.
